# src/main/java/com/ashakhov/ewallet/WebServer.java
@@ -1,38 +1,27 @@
 package com.ashakhov.ewallet;
 
 import com.ashakhov.ewallet.exceptions.handler.DefaultExceptionResolver;
-import com.ashakhov.ewallet.services.AccountService;
-import com.ashakhov.ewallet.services.TransactionService;
 import com.ashakhov.ewallet.services.mongo.AccountServiceMongo;
+import com.ashakhov.ewallet.services.mongo.TransactionServiceMongo;
 import io.vertx.core.AbstractVerticle;
 import io.vertx.core.Promise;
 import io.vertx.core.http.HttpServer;
 import io.vertx.core.http.HttpServerOptions;
-import io.vertx.ext.mongo.MongoClient;
 import io.vertx.ext.web.Router;
 import io.vertx.ext.web.api.contract.openapi3.OpenAPI3RouterFactory;
+import lombok.NoArgsConstructor;
 import lombok.NonNull;
 
 /**
  * @author Alexander Shakhov
  */
+@NoArgsConstructor
 public class WebServer extends AbstractVerticle {
     private static final int PORT = 8080;
 
     private static final String HOST = "localhost";
     @NonNull
     private HttpServer server;
-    @NonNull
-    private final AccountService accountService;
-    @NonNull
-    private final TransactionService transactionService;
-    @NonNull
-    private MongoClient client;
-
-    public WebServer() {
-        accountService = AccountService.getInstance();
-        transactionService = TransactionService.getInstance();
-    }
 
     @Override
     public void start(@NonNull Promise<Void> promise) {
@@ -41,6 +30,7 @@ public class WebServer extends AbstractVerticle {
                 final OpenAPI3RouterFactory routerFactory = asyncResult.result();
 
                 final AccountServiceMongo accountServiceMongo = new AccountServiceMongo(vertx);
+                final TransactionServiceMongo transactionServiceMongo = new TransactionServiceMongo(vertx);
 
                 // 1. Get All Accounts.
                 routerFactory.addHandlerByOperationId("getAccounts", accountServiceMongo::searchAll);
@@ -50,12 +40,14 @@ public class WebServer extends AbstractVerticle {
                 routerFactory.addHandlerByOperationId("create", accountServiceMongo::create);
                 // 4. Update Account's username.
                 routerFactory.addHandlerByOperationId("updateAccount", accountServiceMongo::update);
-                // 5. Create Transaction
-                routerFactory.addHandlerByOperationId("createTransaction", transactionService::createTransaction);
-                // 6. Get Transaction by id.
-                routerFactory.addHandlerByOperationId("getTransactionById", transactionService::getTransactionById);
-                // 7. Get All Transactions
-                routerFactory.addHandlerByOperationId("getTransactions", transactionService::getTransactions);
+                // 5. Delete Account by accountId
+                routerFactory.addHandlerByOperationId("deleteAccountById", accountServiceMongo::delete);
+                // 6. Create Transaction
+                routerFactory.addHandlerByOperationId("createTransaction", transactionServiceMongo::create);
+                // 7. Get Transaction by id.
+                routerFactory.addHandlerByOperationId("getTransactionById", transactionServiceMongo::searchOne);
+                // 8. Get All Transactions
+                routerFactory.addHandlerByOperationId("getTransactions", transactionServiceMongo::searchAll);
 
                 final Router router = routerFactory.getRouter();
                 // Error handlers.
